--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="utf-8"/>
-      <link href="%PUBLIC_URL%/favicon.ico" rel="shortcut icon"/>
-      <meta content="width=device-width, initial-scale=1" name="viewport"/>
-      <meta content="#000000" name="theme-color"/>
-      <!--
+  <head>
+    <meta charset="utf-8" />
+    <link href="%PUBLIC_URL%/favicon.ico" rel="shortcut icon" />
+    <meta
+      content="width=device-width, initial-scale=1"
+      name="viewport"
+    />
+    <meta content="#000000" name="theme-color" />
+    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-      <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
-      <!-- Font Awesome -->
-      <script src="https://kit.fontawesome.com/43b558077a.js"></script>
-      <!--
+    <link href="%PUBLIC_URL%/manifest.json" rel="manifest" />
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/43b558077a.js"></script>
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -21,12 +24,50 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-      <title>React App</title>
-   </head>
-   <body>
-      <noscript>You need to enable JavaScript to run this app.</noscript>
-      <div id="root"></div>
-      <!--
+    <title>React App</title>
+  </head>
+  <body>
+    <noscript
+      >You need to enable JavaScript to run this app.</noscript
+    >
+    <div id="root"></div>
+
+    <!--
+        Netlify form handling React fix:
+        netlify_form_does_not_work
+      -->
+    <form
+      name="contact"
+      method="POST"
+      data-netlify="true"
+      style="display:none;"
+    >
+      <p>
+        <label> Your Name: <input type="text" name="name" /> </label>
+      </p>
+      <p>
+        <label>
+          Your Email: <input type="email" name="email" />
+        </label>
+      </p>
+      <p>
+        <label>
+          Your Role:{' '}
+          <select name="role[]" multiple>
+            <option value="leader">Leader</option>
+            <option value="follower">Follower</option>
+          </select>
+        </label>
+      </p>
+      <p>
+        <label> Message: <textarea name="message"></textarea> </label>
+      </p>
+      <p>
+        <button type="submit">Send</button>
+      </p>
+    </form>
+
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -36,5 +77,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-   </body>
+  </body>
 </html>
